# Convection-Diffusion

./: Cargo.toml  README.md
src/: gif.rs  input.rs  main.rs  matrix.rs  plotting.rs  random_math.rs  sourcefunc.rs
