[package]
name = "conv_diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.29"
plotters = "0.3.7"
num = "0.4.3"
colorgrad = "0.7.0"
indicatif = "0.16"

image = "0.24"
imageproc = "0.23"
gif = "0.12"
